# GenericMath

./: CMakeLists.txt  README.md
source/: Config.h  Math.h  Math.hpp  Math.vcxproj  Math.vcxproj.filters
source/Basic/: Array.hpp  Complex.hpp  Index.hpp  Matrix.hpp  NumTrait.hpp  Tensor.hpp  Trigonometry.hpp  Vector.hpp
source/Generic/: CoordSystem.hpp  Curve.hpp  ParametricFunction.hpp  Plane.hpp  Point.hpp  Quadratic.hpp
source/Linear/: Linear.hpp
source/Space/: R2.hpp  R3.hpp
test/TestBasic/: Array.cpp  CMakeLists.txt  Complex.cpp  Index.cpp  Matrix.cpp  Vector.cpp
